--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ main {
 }
 
 .nav__item:hover {
-    background-color: #ccc;
+    background-color: #edf0f4;
 }
 
 
@@ -72,7 +72,7 @@ main {
 .content__right {
     box-sizing: border-box;
     width: 40%;
-    background-color: lightgrey;
+    background-color: #edf0f4;
     padding: 20px;
 }
 
@@ -87,6 +87,7 @@ main {
 
 .image {
     width: 100%;
+    border: 1px solid #edf0f4;
 }
 
 .content__image span {
@@ -113,6 +114,11 @@ form {
     /* background-color: lightgrey; */
 }
 
+label {
+    color: #3b4754;
+    font-weight: bold;
+}
+
 button {
     display: flex;
     align-items: center;
@@ -120,19 +126,32 @@ button {
     /* border: 1px solid black; */
     border: none;
     border-radius: 4px;
-    background-color: rgb(107, 107, 107);
-    color: white;
+    background-color: #29323d;
+    color: #ffffff;
     padding: 10px 0;
     margin-top: 10px;
     cursor: pointer;
 }
 
 button:hover {
-    background-color: black;
-    color: rgb(161, 161, 161);
+    background-color: #1a1f26;
+    color: lightgrey;
 }
 
 input, select {
     margin-bottom: 10px;
     padding: 8px 2px;
+    border: 1px solid #c9d3dd;
+    border-radius: 4px;
 }
+
+.form__title {
+    font-weight: bold;
+    color: #29323d;
+}
+
+.form__subtitle {
+    color: #29323d;
+}
+
+/*=============== PRODUCT ===============*/
