--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ main {
 /*=============== NAVIGATION ===============*/
 .nav__container {
     display: flex;
+    align-items: center;
 }
 
 .logo__container {
@@ -27,11 +28,11 @@ main {
 }
 
 .nav__item {
-    border: 1px solid black;
-    /* border-radius: 4px; */
-    /* border-collapse: collapse; */
-    display: flex;
-    align-items: center;
+    /* border: 1px solid black; */
+    /* border-radius: 4px;  */
+    /* border-collapse: collapse;  */
+    /* display: flex;
+    align-items: center; */
     padding: 5px 20px 5px 20px;
     text-decoration: none;
     color: black;
@@ -39,7 +40,24 @@ main {
 
 .nav__item:hover {
     background-color: #edf0f4;
+    /* border-radius: 4px; */
 }
+
+.nav__container table {
+    border: 1px solid #1a1f26;
+    border-collapse: separate;
+    border-radius: 5px;
+}
+
+.nav__container th {
+    border-left: 1px solid #1a1f26;
+    padding: 3px 0;
+}
+
+.nav__container th:first-child {
+    border: none;
+}
+
 
 
 /*=============== HOME ===============*/
@@ -142,7 +160,7 @@ input, select {
     margin-bottom: 10px;
     padding: 8px 2px;
     border: 1px solid #c9d3dd;
-    border-radius: 4px;
+    border-radius: 5px;
 }
 
 .form__title {
