--- a/css/style.css
+++ b/css/style.css
@@ -28,22 +28,34 @@ main {
 }
 
 .nav__item {
-    /* border: 1px solid black; */
+    border: 1px solid black;
     /* border-radius: 4px;  */
     /* border-collapse: collapse;  */
-    /* display: flex;
-    align-items: center; */
+    display: flex;
+    align-items: center; 
     padding: 5px 20px 5px 20px;
     text-decoration: none;
     color: black;
 }
 
-.nav__item:hover {
-    background-color: #edf0f4;
-    /* border-radius: 4px; */
+.nav__home, .nav__package {
+    border-right: none;
 }
 
-.nav__container table {
+.nav__home {
+    border-radius: 5px 0px 0px 5px;
+}
+
+.nav__call {
+    border-radius: 0 5px 5px 0;
+}
+
+.nav__item:hover {
+    background-color: #edf0f4;  /* #edf0f4 */
+}
+
+/* !padding hover akan terlihat tidak menyatu jika menggunakan table */
+/* .nav__container table {
     border: 1px solid #1a1f26;
     border-collapse: separate;
     border-radius: 5px;
@@ -57,6 +69,10 @@ main {
 .nav__container th:first-child {
     border: none;
 }
+
+.nav__container th:hover {
+    background-color: grey;
+} */
 
 
 
