--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,14 @@
+/*=============== GOOGLE FONTS ===============*/
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+
 /*=============== BASE ===============*/
+body,
+button,
+input,
+select {
+    font-family: "Poppins", sans-serif;
+}
+
 body {
     padding: 5px 25px;
     background-color: antiquewhite;
@@ -16,7 +26,7 @@ header::after {
     content: "";
     display: block;
     position: absolute;
-    bottom: 0px;
+    bottom: -5px;
     left: -35px;
     right: -35px;
     border-bottom: 1px solid grey;
@@ -120,7 +130,7 @@ main {
     box-sizing: border-box;
     width: 30%;
     background-color: #edf0f4;
-    padding: 20px;
+    padding: 40px;
     /* border: 1px solid black; */
     border-radius: 5px;
 }
@@ -134,7 +144,7 @@ main {
 }
 
 .image {
-    width: 70%;
+    width: 80%;
     /* height: 80%; */
     border: 1px solid black; /* #edf0f4 */
 }
@@ -160,13 +170,12 @@ main {
 form {
     display: flex;
     flex-direction: column;
-    /* padding: 20px; */
-    /* background-color: lightgrey; */
 }
 
 label {
     color: #3b4754;
     font-weight: bold;
+    font-size: 0.9rem;
 }
 
 button {
@@ -190,19 +199,25 @@ button:hover {
 
 input, select {
     margin-bottom: 10px;
-    padding: 8px 2px;
-    border: 1px solid #c9d3dd;
+    padding: 12px 8px;
+    border: 2px solid #c9d3dd;
     border-radius: 5px;
 }
 
 .form__title {
     font-weight: bold;
     color: #29323d;
+    /* padding-top: 10px; */
+    font-size: 1.1rem;
 }
 
 .form__subtitle {
     color: #29323d;
+    padding-top: 10px;
+    margin-bottom: 50px;
+    font-size: .9rem;
 }
+
 
 /*=============== PRODUCT ===============*/
 .product__container .circle {
