--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,14 @@
 body,
 button,
 input,
-select {
+select,
+button {
     font-family: "Poppins", sans-serif;
 }
 
 body {
     padding: 5px 25px;
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
 }
 
 header {
@@ -105,13 +106,19 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 20px 0;
+    padding: 20px 0 40px;
+}
+
+.title h1{
+    font-size: 2rem;
+    margin-bottom: 0;
 }
 
 
     /*=============== CONTENT ===============*/
 .content__container {
     display: flex;
+    justify-content: center;
 }
 
 .content__left,
@@ -123,7 +130,8 @@ main {
 
 .content__left {        
     box-sizing: border-box;
-    width: 70%;
+    width: 50%;
+    align-items: center;
 }
 
 .content__right {
@@ -137,6 +145,7 @@ main {
 
 .content__image {
     box-sizing: border-box;
+    width: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -144,7 +153,7 @@ main {
 }
 
 .image {
-    width: 80%;
+    width: 100%;
     /* height: 80%; */
     border: 1px solid black; /* #edf0f4 */
 }
@@ -157,12 +166,29 @@ main {
 .content__customer {
     display: flex;
     justify-content: center;
+    align-items: center;
     padding-top: 50px;
+}
+
+.content__customer .circle {
+    display: flex;
+    justify-content: center;
+    background-color: #edf0f4;
+    border-radius: 50%;
+    height: 2.2rem;
+    font-size: 2rem;
+    padding: 0.45rem;
+    margin-right: 1rem;
 }
 
 .customer__name {
     display: flex;
     flex-direction: column;
+    font-size: 0.9rem;
+}
+
+.customer__name span i {
+    font-size: 0.8rem;
 }
 
 
@@ -220,6 +246,10 @@ input, select {
 
 
 /*=============== PRODUCT ===============*/
+.product__container {
+    margin-top: 5rem;
+}
+
 .product__container .circle {
     display: flex;
     justify-content: center;
