--- a/css/style.css
+++ b/css/style.css
@@ -125,13 +125,13 @@ main {
 .content__right {
     display: flex;
     flex-direction: column;
-    /* justify-content: flex-start; */
+    justify-content: flex-start;
 }
 
 .content__left {        
     box-sizing: border-box;
     width: 50%;
-    align-items: center;
+    /* align-items: center; */
 }
 
 .content__right {
@@ -158,7 +158,7 @@ main {
     border: 1px solid black; /* #edf0f4 */
 }
 
-.content__image span {
+.content__image .image-tag {
     color: grey;
     padding-top: 30px;
 }
