Update: product circle width

--- a/css/style.css
+++ b/css/style.css
@@ -397,7 +397,7 @@ input, select {
     justify-content: center;
     background-color: #edf0f4;
     border-radius: 50%;
-    width: 1.5em;  
+    width: 2.5rem;  
     padding: 0.45rem;
     margin-right: 1rem;
 }
