--- a/css/style.css
+++ b/css/style.css
@@ -301,11 +301,45 @@ label {
     font-weight: var(--font-semibold);
 }
 
+label span {
+    color: red;
+}
+
 input, select, button {
-    margin-bottom: var(--padding-10px);
+    /* margin-bottom: var(--padding-10px); */
     padding: 0.75rem 0.5rem;
     border: 2px solid #c9d3dd;
     border-radius: 0.3125rem;
+}
+
+p {
+    margin-bottom: var(--padding-10px);
+    font-size: var(--smaller-font-size);
+    border: none;
+    color: red;
+}
+
+#success-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.success-message {
+    background-color: white;
+    padding: var(--padding-20px);
+    border-radius: var(--padding-5px);
+    box-shadow: 0 0 var(--padding-10px) rgba(0, 0, 0, 0.5);
+    width: 30%;
+    display: flex;
+
 }
 
 button {
@@ -318,6 +352,27 @@ button {
 button:hover {
     background-color: var(--button-hover-color);
     color: lightgrey;
+}
+
+.bxs-x-circle {
+    color: var(--button-color);
+}
+
+.success-message .circle {
+    margin: 0;
+    font-size: var(--padding-20px);    
+}
+
+.success-message .circle:hover .bxs-x-circle{
+    color: white;
+}
+
+#send-success {
+    margin: 0;
+    padding: 0 var(--padding-35px);
+    color: black;
+    text-align: justify;
+    align-self: flex-end;
 }
 
 
